2006-01-22  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* gnome-dictionary/data/gnome-dictionary.desktop.in:
	* gnome-screenshot/gnome-screenshot.desktop.in:
	* logview/gnome-system-log.desktop.in:
	* gfloppy/gfloppy.desktop.in: Add the GTK category.

2006-01-17  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* HACKING: review layout, and add a notice for libgdict.

2006-01-17  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* gnome-dictionary/libgdict/gdict-1.0.pc.in: fix version macro

	* configure.in: fix libgdict version generation macros, and add
	a versioning scheme:
	  - first release of a new cycle: major += 1, minor = micro = 0;
	  - for each release before API freeze: minor += 1;
	  - for each release past API freeze: micro += 1;
	even if libgdict is not part of the developers platform, the
	same rules apply: no ABI breakage (unless unavoidable) and
	no API breakage past the API freeze date.

2006-01-16  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in: post release bump to 2.13.6

2006-01-16  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* README, NEWS: release 2.13.5

2006-01-16  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in: bumped libgdict to version 0.2.0 (should have done it
	earlier).

2006-01-15  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in: require GLib >= 2.9.1 in order to use the newly added
	g_slice_* functions inside gnome-dictionary and gsearchtool

2006-01-14  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in: updated LIBGDICT_LT_VERSION

2006-01-02  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* configure.in: post release bump to 2.13.5

2006-01-02  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* README, NEWS: release 2.13.4

2006-01-02  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* HACKING: update branches; add notice about unified diff format for
	patches.

2005-12-19  Emmanuele Bassi  <ebassi@cvs.gnome.org>

	* po/POTFILES.in: add
	
	  gnome-dictionary/data/gnome-dictionary-preferences.glade
	
	to the translatable files.
